--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -10,11 +10,11 @@ location __PATH__/ {
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|wasm)$ {
         expires 1y;
-        add_header Cache-Control "public, immutable";
+        more_set_headers "Cache-Control: public, immutable";
     }
 
     # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
+    more_set_headers "X-Frame-Options: SAMEORIGIN always";
+    more_set_headers "X-Content-Type-Options: nosniff always";
+    more_set_headers "X-XSS-Protection: 1; mode=block always";
 }
