--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,7 +5,7 @@ location __PATH__/ {
     alias __INSTALL_DIR__/dist/;
     index index.html;
 
-    try_files $uri $uri/ __PATH__/index.html;
+    try_files $uri $uri/ /index.html;
 
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|wasm)$ {
